# DXX-Raytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  COPYING.txt  PNGToDDS.py  README.md  copy_shaders.bat  copy_textures.bat  copy_textures_from_debug_build_dangerous.bat  copy_textures_from_release_build_dangerous.bat
.github/workflows/: cmake.yml
RT/: CMakeLists.txt  RText.c  RText.h  RTgr.c  RTgr.h  RTmaterials.c  RTmaterials.h  RTutil.h  dx12.c  dx12.h  material_viewer.cpp  material_viewer.h  polymodel_viewer.cpp  polymodel_viewer.h
RT/Core/: Arena.c  Arena.h  CMakeLists.txt  Common.c  Common.h  Config.cpp  Config.h  FileIO.cpp  FileIO.h  Hash.h  MemoryScope.hpp  MiniMath.h  SlotMap.hpp  String.c  String.h  Vault.cpp  Vault.h  VirtualMemory.c  VirtualMemory.h
RT/Game/: Level.h  Lights.c  Lights.h  level.c
RT/Renderer/Backend/Common/: CMakeLists.txt
RT/Renderer/Backend/Common/include/: ApiTypes.h  GLTFLoader.h  ImageReadWrite.h  Renderer.h
RT/Renderer/Backend/DX12/: CMakeLists.txt
RT/Renderer/Backend/DX12/CGLTF/: cgltf.h
RT/Renderer/Backend/DX12/DXC/: CMakeLists.txt
RT/Renderer/Backend/DX12/DirectXTK12/src/: DDSc.h
RT/Renderer/Backend/DX12/FSR2/lib/x64/: ffx_fsr2_api_dx12_x64.lib  ffx_fsr2_api_x64.lib
RT/Renderer/Backend/DX12/FSR2/lib/x64/Debug/: ffx_fsr2_api_x64d.lib
RT/Renderer/Backend/DX12/STB/: stb_image.h
RT/Renderer/Backend/DX12/assets/: CMakeLists.txt
RT/Renderer/Backend/DX12/assets/shaders/: bloom.hlsl  brdf.hlsl  composite.hlsl  denoise.hlsl  direct_lighting.hlsl  direct_lighting.hlsli  direct_lighting_inline.hlsl  gen_mipmap.hlsl  indirect_lighting.hlsl  indirect_lighting_inline.hlsl  occlusion.hlsl  post_process.hlsl  primary_ray.hlsl  primary_ray.hlsli  primary_ray_inline.hlsl  raster_blit.hlsl  raster_line.hlsl  raster_line_world.hlsl  raster_tri.hlsl  resolve_final_color.hlsl  taa.hlsl
RT/Renderer/Backend/DX12/assets/shaders/denoiser/: blur.hlsl  history_fix.hlsl  post_resample.hlsl  prepass.hlsl  resample.hlsl
RT/Renderer/Backend/DX12/assets/shaders/include/: common.hlsl
RT/Renderer/Backend/DX12/assets/shaders/include_shared/: shared_common.hlsl.h  shared_defines.hlsl.h  shared_rendertargets.hlsl.h  shared_tweakvars.hlsl.h
RT/Renderer/Backend/DX12/assets/shaders/restir/: gen_candidates.hlsl
RT/Renderer/Backend/DX12/cimgui/: cimgui.cpp  cimgui.h
RT/Renderer/Backend/DX12/cimgui/imgui/backends/: imgui_impl_dx12.cpp  imgui_impl_win32.cpp
RT/Renderer/Backend/DX12/cimgui/imgui/examples/example_win32_directx12/: build_win32.bat  main.cpp
RT/Renderer/Backend/DX12/src/: CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DescriptorArena.cpp  DescriptorArena.hpp  FSR2.cpp  FSR2.h  GLTFLoader.cpp  GPUProfiler.cpp  GPUProfiler.h  GlobalDX.h  ImageReadWrite.cpp  MeshTracker.cpp  MeshTracker.hpp  RenderBackend.cpp  RenderBackend.h  Renderer.cpp  Resource.cpp  Resource.h  ResourceTracker.cpp  ResourceTracker.hpp  RingBuffer.cpp  RingBuffer.h  ShaderTable.cpp  ShaderTable.h  WinIncludes.h  main.cpp  mikktspace.c
d1/: CMakeLists.txt  COPYING.txt  d1x.ini
d1/2d/: 2dsline.c  bitblt.c  bitmap.c  circle.c  disc.c  font.c  line.c  palette.c  pcx.c  pixel.c  rect.c
d1/3d/: draw.c  interp.c  rod.c  setup.c
d1/English.lproj/: InfoPlist.strings
d1/arch/include/: event.h  key.h  mouse.h  window.h
d1/arch/ogl/: gr.c  ogl.c
d1/arch/sdl/: digi.c  digi_audio.c  digi_mixer.c  digi_mixer_music.c  event.c  gr.c  init.c  joy.c  jukebox.c  key.c  mouse.c  rbaudio.c  window.c
d1/arch/win32/: messagebox.c
d1/assets/: cockpit_prototype.gltf
d1/assets/render_presets/: default.vars  gamer.vars
d1/assets/splash-logo/: buas.pcx
d1/assets/textures/: arw01_2.material  arw01_5.material  brig001.material  ceil003.material  ceil009.material  ceil016.material  ceil017.material  ceil020.material  cmissil1_10.material  cmissil2_14.material  door01_0.material  door01_9.material  door12_10.material  door12_9.material  door14_1.material  door14_8.material  exit01.material  exit02.material  exp10_1.material  exp21_12.material  exp21_4.material  fan01_0.material  fan01_1.material  fram06.material  hmissil1_9.material  hmissil2_4.material  laser_14.material  laser_3.material  laser_7.material  metl134.material  misc011.material  misc041.material  misc046.material  misc050.material  misc060_0.material  misc060_2.material  misc060b_0.material  misc060b_2.material  misc061_3.material  misc061_5.material  (+32 more)
d1/editor/: autosave.c  centers.c  curves.c  fixseg.c  group.c  info.c  kfuncs.c  ksegsize.c  med.c  meddraw.c  medsel.c  medwall.c  mine.c  texture.c
d1/include/: 3d.h  args.h  console.h  dxxerror.h  gr.h  internal.h  logger.h  physfsx.h  pstypes.h  vecmat.h
d1/include/editor/: esegment.h
d1/main/: ai.c  aipath.c  automap.c  bm.c  bmread.c  cntrlcen.c  collide.c  collide.h  config.c  console.c  controls.c  credits.c  digiobj.c  dumpmine.c  endlevel.c  fireball.c  fuelcen.c  fvi.c  game.c  game.h  gamecntl.c  gamefont.c  gamemine.c  gamerend.c  gamesave.c  gameseg.c  gameseq.c  gauges.c  gauges.h  hud.c  inferno.c  kconfig.c  kconfig.h  kmatrix.c  laser.c  laser.h  lighting.c  menu.c  menu.h  mission.c  (+36 more)
d1/maths/: vecmat.c
d1/mem/: mem.c
d1/misc/: Logger.c  args.c  error.c  hash.c  hmp.c  ignorecase.c  physfsx.c
d1/texmap/: scanline.c
d1/ui/: dialog.c  gadget.c  keypad.c  menubar.c
gav-archiver/: CMakeLists.txt  main.cpp
physfs-main/: CMakeLists.txt
sdl-master/: .gitignore  CMakeLists.txt  README.md  SDL_config.h.macOS
sdl-master/sdl/: SDL_config.h
sdl-master/sdl/include/: SDL_config.h
sgv-archiver/: CMakeLists.txt  main.cpp  sgv-header.h  sgv-index-entry.h  sgv-utils.cpp  sgv-utils.h
